--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>ssl-vision-client</title>
   </head>
-  <body>
+  <body style="margin: 0">
     <noscript>
       <strong>We're sorry but ssl-vision-client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
